--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -41,11 +41,13 @@
   flex-direction: column;
   width: 320px;
 }
-.main input[type="text"] {
+.main input[type="text"],
+.main input[type="number"],
+.main select {
   padding: 12px 16px;
   border: 1px solid #10a37f;
   border-radius: 4px;
-  margin-bottom: 24px;
+  margin-bottom: 12px;
   outline-color: #10a37f;
 }
 .main ::placeholder {
@@ -64,4 +66,23 @@
 .main .result {
   font-weight: bold;
   margin-top: 40px;
+}
+
+.loading{
+    position: sticky;
+    left: 50%;
+    top: 35%;
+    z-index: 1000;
+    height: 31px;
+    width: 31px;
+}
+
+.blur{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height:1000vh;
+  background-color: #ffffff55;
+  filter: blur(9px);
 }
