--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -13,6 +13,7 @@
   font-weight: bold;
   font-style: normal;
 }
+
 .main,
 .main input {
   font-size: 16px;
@@ -25,9 +26,10 @@
   flex-direction: column;
   align-items: center;
   padding-top: 60px;
+  background: linear-gradient(90deg, rgba(238,238,238,1) 0%, rgba(198,214,219,1) 100%);  
 }
 .main .icon {
-  width: 34px;
+  width: 150px;
 }
 .main h3 {
   font-size: 32px;
@@ -86,3 +88,4 @@
   background-color: #ffffff55;
   filter: blur(9px);
 }
+
